--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "qdrant-client>=1.12.0",
     "pydantic>=2.10.6",
     "fastmcp>=2.7.0",
+    "nltk>=3.8.1",
+    "tiktoken>=0.5.0",
 ]
 
 [build-system]
