--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = [
+    "aiohttp>=3.12.15",
     "ipdb>=0.13.13",
     "isort>=6.0.1",
     "mypy>=1.9.0",
